added you tube vedio

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>about me</title>
 </head>
 <body style="background-color: brown;">
-<h1 style="textallign:center; color  :pink;font style:italic;font size:50px;">DEEXITHA<br>cse2<br>GVP COLLEGE OF ENGINEERING</h1>
+<h1 style="textallign:center; color  :pink;font style:italic;font size :50px ;">DEEXITHA<br>cse2<br>GVP COLLEGE OF ENGINEERING</h1>
 <h2 style="color:blue;font style:italic;font size:50px;">Die Hard Fan Of Junior Ntr</h2>
 <img width="80%" src="ntr.webp"></body>
-</html> 
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U7uYYwHOcmA?si=ub0kYlWoRrZEkY30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</html>
