--- a/ntr.html
+++ b/ntr.html
@@ -3,6 +3,6 @@
     </title>
     <body>
         <h1>thank u for visiting my page</h1>
-        <a href="about.html">about me</a>
+        <a href="index.html">about me</a>
     </body>
 </html>
