--- a/ntr.html
+++ b/ntr.html
@@ -1,6 +1,8 @@
 <html>
+    <head>
     <title>conclusion page
     </title>
+    </head>
     <body>
         <h1>thank u for visiting my page</h1>
         <a href="index.html">about me</a>
