--- a/ntr.html
+++ b/ntr.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>thank u for visiting my page</h1>
-        <a href="index.html">about me</a>
+        <a href="index.html">GO BACK</a>
     </body>
 </html>
