--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 <h2 style="color:blue;font style:italic;font size:50px;">Die Hard Fan Of Junior Ntr</h2>
 <img width="80%" src="ntr.webp"></body>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/U7uYYwHOcmA?si=ub0kYlWoRrZEkY30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<a href ="ntr.html">CLICK HERE</a>
 </html>
