--- a/ntr.html
+++ b/ntr.html
@@ -4,7 +4,7 @@
     </title>
     </head>
     <body>
-        <h1>thank u for visiting my page</h1>
+        <h1>thank you for visiting my page</h1>
         <a href="index.html">GO BACK</a>
     </body>
 </html>
